# training_plan

GildedRose_kata/: README.md
GildedRose_kata/src/main/java/com/gildedrose/: GildedRose.java
GildedRose_kata/src/test/java/com/gildedrose/: GildedRoseTest.java
Tennis-Refactoring-Kata/: README.md
Tennis-Refactoring-Kata/src/main/java/: TennisGame1.java
bankOCR/: CMakeLists.txt  README.md
bankOCR/src/: converter.c  converter.h
bankOCR/test/: CU_main.h  tests.c
bowling_kata/: README.md
bowling_kata/src/: bowling.c  bowling.h
bowling_kata/test/: bowling_test.c
stack_c/: CMakeLists.txt  CMakeLists2.txt  Makefile  README.md
stack_c/src/: j_stack.c  j_stack.h
stack_c/src/linn_lib/: l_stack.c  l_stack.h
stack_c/test/: CU_main.c  j_stackTest.c  j_stackTest.h  l_stackTest.c  l_stackTest.h  stackTest.c
